[project]
name = "robinhood-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "robin_stocks>=3.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.scripts]
robinhood-mcp = "robinhood_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
